# D2MW

./: .codedocs  .gitignore  CMakeLists.txt  README.md
doxygen/: Doxyfile.doxy  mainpage.dox
doxygen/pages/: mainpage.dox
examples/: example_gas.cpp  example_isrf.cpp  example_sources.cpp
include/: ISRF.h  blackbody.h  d2mw.h  galaxy.h  gas_H2.h  gas_HI.h  gas_HII.h  integrator.h  mathutils.h  mks.h  sources.h  utilities.h  vector3.h  xco.h
include/models/: gasFerriere2007.h  gas_Ferriere2007.h  gravitational_potential.h  isrf_Vernetto2016.h
libs/ymw16/: CMakeLists.txt  cn.h  ne.c  spiral.c  ymw16par.c
src/: ISRF.cpp  d2mw.cpp  gas_H2.cpp  gas_HI.cpp  gas_HII.cpp  sources.cpp  utilities.cpp  xco.cpp
src/models/: gasFerriere2007.cpp  gas_Ferriere2007.cpp  gravitational_potential.cpp  isrf_Vernetto2016.cpp
